MOD: 调整 blog 入口

--- a/blog.conf
+++ b/blog.conf
@@ -4,7 +4,7 @@ server {
 
     server_name blog.lorryzz.cn;
 
-    root    /root/blog/Lorry1123.github.io/;
+    root    /root/blog/lorry_blog/public/;
     index   index.html;
 
     ssl_certificate "/root/.ssl/blog.lorryzz.cn/Nginx/1_blog.lorryzz.cn_bundle.crt";
