ADD: 双博客配置

--- a/blog.conf
+++ b/blog.conf
@@ -2,7 +2,26 @@ server {
     listen 80;
     listen  443 ssl;
 
+    # server_name blog.lorry.lorryzz.cn;
     server_name blog.lorryzz.cn;
+
+    root    /root/blog/lorry_blog/public/;
+    index   index.html;
+
+    ssl_certificate "/root/.ssl/blog.lorryzz.cn/Nginx/1_blog.lorryzz.cn_bundle.crt";
+    ssl_certificate_key "/root/.ssl/blog.lorryzz.cn/Nginx/2_blog.lorryzz.cn.key";
+    ssl_session_cache shared:SSL:1m;
+    ssl_session_timeout  5m;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2; #请按照这个协议配置
+    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE; #请按照这个套件配置，配置加密套件，写法遵循 openssl 标准。
+    ssl_prefer_server_ciphers on;
+}
+
+server {
+    listen 80;
+    listen  443 ssl;
+
+    server_name blog.zz.lorryzz.cn;
 
     root    /root/blog/lorry_blog/public/;
     index   index.html;
