--- a/blog.conf
+++ b/blog.conf
@@ -12,9 +12,9 @@ server {
     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE; #请按照这个套件配置，配置加密套件，写法遵循 openssl 标准。
     ssl_prefer_server_ciphers on;
 
+
     location /lorry {
-        alias   /root/blog/lorry_blog/public/;
-        index   index.html;
+        alias /root/blog/lorry/public;
     }
     location /zz {
         return 403;
