ADD: wedding backend

--- a/test.conf
+++ b/test.conf
@@ -1,19 +1,19 @@
-upstream test {
-    server 127.0.0.1:8080;
-}
+# upstream test {
+#     server 127.0.0.1:8080;
+# }
 
-server {
-    listen 443; #SSL 访问端口号为 443
-    server_name www.lorryzz.cn; #填写绑定证书的域名
-    ssl_certificate "/root/.ssl/www.lorryzz.cn/Nginx/1_www.lorryzz.cn_bundle.crt";
-    ssl_certificate_key "/root/.ssl/www.lorryzz.cn/Nginx/2_www.lorryzz.cn.key";
-    ssl_session_cache shared:SSL:1m;
-    ssl_session_timeout  5m;
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2; #请按照这个协议配置
-    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE; #请按照这个套件配置，配置加密套件，写法遵循 openssl 标准。
-    ssl_prefer_server_ciphers on;
+# server {
+#     listen 443; #SSL 访问端口号为 443
+#     server_name www.lorryzz.cn; #填写绑定证书的域名
+#     ssl_certificate "/root/.ssl/www.lorryzz.cn/Nginx/1_www.lorryzz.cn_bundle.crt";
+#     ssl_certificate_key "/root/.ssl/www.lorryzz.cn/Nginx/2_www.lorryzz.cn.key";
+#     ssl_session_cache shared:SSL:1m;
+#     ssl_session_timeout  5m;
+#     ssl_protocols TLSv1 TLSv1.1 TLSv1.2; #请按照这个协议配置
+#     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:HIGH:!aNULL:!MD5:!RC4:!DHE; #请按照这个套件配置，配置加密套件，写法遵循 openssl 标准。
+#     ssl_prefer_server_ciphers on;
 
-    location / {
-      proxy_pass http://test;
-    }
-}
+#     location / {
+#       proxy_pass http://test;
+#     }
+# }
