--- a/blog.conf
+++ b/blog.conf
@@ -19,4 +19,7 @@ server {
     location /zz {
         return 403;
     }
+    location /hello/ {
+        proxy_pass http://127.0.0.1:8080/;
+    }
 }
