--- a/wedding.conf
+++ b/wedding.conf
@@ -1,7 +1,3 @@
-upstream wedding {
-    server 127.0.0.1:8000;
-}
-
 server {
     listen 80;
     listen 443; #SSL 访问端口号为 443
@@ -16,6 +12,6 @@ server {
 
     location ^~/wedding {
         rewrite ^/wedding/(.*)$ /$1 break;
-        proxy_pass http://wedding;
+        proxy_pass http://127.0.0.1:8000;
     }
 }
