MOD: proxy request to server not static pages

--- a/blog.conf
+++ b/blog.conf
@@ -14,7 +14,8 @@ server {
 
 
     location /lorry {
-        alias /root/blog/lorry/public;
+        # alias /root/blog/lorry/public;
+        proxy_pass http://127.0.0.1:4000;
     }
     location /zz {
         return 403;
