--- a/blog.conf
+++ b/blog.conf
@@ -23,4 +23,8 @@ server {
     location /hello/ {
         proxy_pass http://127.0.0.1:8080/;
     }
+    location / {
+        root /root/server_index;
+        index index.html;
+    }
 }
